--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>App Web Docente</title>
   <link rel="stylesheet" href="style.css" />
-  <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase.js"></script>
-  <script defer src="firebase-config.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
   <script defer src="script.js"></script>
 </head>
+
 <body>
   <div class="container">
     <h2>Registro de Docente</h2>
