--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Plataforma Docente</title>
+  <title>App Web Docente</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
@@ -11,64 +11,73 @@
   <script defer src="script.js"></script>
 </head>
 
-<body class="bg-gradient-to-br from-sky-100 to-blue-200 min-h-screen flex items-center justify-center">
-  <main class="bg-white w-full max-w-md p-6 rounded-lg shadow-md space-y-6">
-
+<body class="bg-gradient-to-r from-sky-100 to-blue-200 min-h-screen flex items-center justify-center">
+  <main class="w-full max-w-md bg-white shadow-xl rounded-xl p-8 space-y-8">
     <h1 class="text-2xl font-bold text-center text-blue-800">Plataforma Docente</h1>
 
-    <!-- Login -->
+    <!-- Login (se muestra primero) -->
     <section id="loginSection">
+      <h2 class="text-xl font-semibold text-gray-700 mb-4">Iniciar Sesión</h2>
       <form id="loginForm" class="space-y-4">
         <input type="email" id="loginEmail" placeholder="Correo" required class="w-full p-2 border rounded" />
         <input type="password" id="loginPassword" placeholder="Contraseña" required class="w-full p-2 border rounded" />
-        <button type="submit" class="w-full bg-green-600 text-white py-2 rounded hover:bg-green-700">Iniciar Sesión</button>
+        <button type="submit" class="w-full bg-green-600 text-white py-2 rounded hover:bg-green-700">Ingresar</button>
       </form>
-      <p class="text-center mt-4">
-        ¿No tienes cuenta? 
-        <a href="#" id="showRegister" class="text-blue-600 hover:underline">Regístrate</a>
+      <p class="text-center mt-4 text-gray-600">¿No tienes cuenta? 
+        <button id="showRegisterBtn" class="text-blue-600 hover:underline">Regístrate aquí</button>
       </p>
     </section>
 
-    <!-- Registro -->
+    <!-- Registro (oculto inicialmente) -->
     <section id="registerSection" class="hidden">
+      <h2 class="text-xl font-semibold text-gray-700 mb-4">Registro de Docente</h2>
       <form id="registerForm" class="space-y-4">
-        <input type="email" id="registerEmail" placeholder="Correo" required class="w-full p-2 border rounded" />
-        <input type="password" id="registerPassword" placeholder="Contraseña" required class="w-full p-2 border rounded" />
-        <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">Registrarse</button>
+        <input type="email" id="email" placeholder="Correo" required class="w-full p-2 border rounded" />
+        <input type="password" id="password" placeholder="Contraseña" required class="w-full p-2 border rounded" />
+        <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">Registrar</button>
       </form>
-      <p class="text-center mt-4">
-        ¿Ya tienes cuenta?
-        <a href="#" id="showLogin" class="text-blue-600 hover:underline">Inicia sesión</a>
+      <p class="text-center mt-4 text-gray-600">¿Ya tienes cuenta? 
+        <button id="showLoginBtn" class="text-blue-600 hover:underline">Inicia sesión aquí</button>
       </p>
     </section>
 
-    <!-- Dashboard -->
-    <section id="dashboard" class="hidden space-y-6">
-      <div id="salonExistente" class="hidden">
-        <h2 class="text-xl font-semibold text-gray-800">Tu Salón</h2>
-        <p><strong>Grado:</strong> <span id="gradoFinal"></span></p>
-        <ul id="listaAlumnos" class="list-disc pl-5 space-y-1 text-gray-700"></ul>
+    <!-- Dashboard Principal (oculto inicialmente) -->
+    <section id="dashboard" class="hidden">
+      <div class="flex justify-between items-center mb-6">
+        <h2 class="text-xl font-semibold text-gray-700">Mis Clases</h2>
+        <button id="createClassBtn" class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">
+          Crear Nueva Clase
+        </button>
       </div>
-
-      <div>
-        <h2 class="text-xl font-semibold text-gray-800">Crear nuevo salón</h2>
-        <form id="classForm" class="space-y-4">
-          <select id="grado" required class="w-full p-2 border rounded">
-            <option value="">Seleccione grado</option>
-            <option>1° Primaria</option>
-            <option>2° Primaria</option>
-            <option>3° Primaria</option>
-            <option>4° Primaria</option>
-            <option>5° Primaria</option>
-            <option>6° Primaria</option>
-          </select>
-          <input type="number" id="cantidad" placeholder="Cantidad de alumnos" min="1" required class="w-full p-2 border rounded" />
-          <button type="submit" class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700">Crear salón</button>
-        </form>
+      
+      <!-- Lista de clases existentes -->
+      <div id="classList" class="space-y-4">
+        <!-- Las clases se cargarán dinámicamente aquí -->
       </div>
     </section>
 
-    <!-- Formulario Alumnos -->
+    <!-- Formulario para crear clase (oculto inicialmente) -->
+    <section id="createClassSection" class="hidden">
+      <h2 class="text-xl font-semibold text-gray-700 mb-4">Crear Nueva Clase</h2>
+      <form id="classForm" class="space-y-4">
+        <select id="grado" required class="w-full p-2 border rounded">
+          <option value="">Seleccione grado</option>
+          <option>1° Primaria</option>
+          <option>2° Primaria</option>
+          <option>3° Primaria</option>
+          <option>4° Primaria</option>
+          <option>5° Primaria</option>
+          <option>6° Primaria</option>
+        </select>
+        <input type="number" id="cantidad" placeholder="Cantidad de alumnos" min="1" required class="w-full p-2 border rounded" />
+        <div class="flex space-x-4">
+          <button type="submit" class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700">Crear Clase</button>
+          <button type="button" id="cancelCreateClass" class="w-full bg-gray-300 text-gray-800 py-2 rounded hover:bg-gray-400">Cancelar</button>
+        </div>
+      </form>
+    </section>
+
+    <!-- Formulario para agregar alumnos (oculto inicialmente) -->
     <section id="alumnosForm" class="hidden">
       <h2 class="text-xl font-semibold text-gray-700 mb-2">
         Agregar Alumno <span id="alumnoActual">1</span> de <span id="alumnoCantidad">1</span>
@@ -78,6 +87,21 @@
         <input type="text" id="claveAlumno" placeholder="Contraseña" required class="w-full p-2 border rounded" />
         <button type="submit" class="w-full bg-yellow-500 text-white py-2 rounded hover:bg-yellow-600">Agregar Alumno</button>
       </form>
+    </section>
+
+    <!-- Vista de clase creada (oculto inicialmente) -->
+    <section id="classView" class="hidden">
+      <div class="flex justify-between items-center mb-4">
+        <h2 class="text-xl font-semibold text-gray-700">Clase: <span id="classGrade"></span></h2>
+        <button id="backToDashboard" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400">
+          Volver al Dashboard
+        </button>
+      </div>
+      
+      <div class="bg-gray-50 p-4 rounded-lg">
+        <h3 class="font-medium text-gray-700 mb-2">Alumnos:</h3>
+        <ul id="listaAlumnos" class="list-disc pl-5 text-gray-700 space-y-1"></ul>
+      </div>
     </section>
   </main>
 </body>
