--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
   <script defer src="script.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body class="bg-gradient-to-r from-sky-100 to-blue-200 min-h-screen flex items-center justify-center">
@@ -94,13 +96,16 @@
       </form>
     </section>
 
-    <!-- Vista de clase creada (oculto inicialmente) -->
+        <!-- Vista de clase creada (oculto inicialmente) -->
     <section id="classView" class="hidden">
       <div class="flex justify-between items-center mb-4">
         <h2 class="text-xl font-semibold text-gray-700">Clase: <span id="classGrade"></span></h2>
         <div class="flex space-x-2">
           <button id="backToDashboard" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400">
             Volver al Dashboard
+          </button>
+          <button id="deleteClassBtn" class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700">
+            Eliminar Clase
           </button>
           <button id="logoutBtnFromClass" class="text-red-600 hover:text-red-800 text-sm font-medium self-center">
             Cerrar Sesión
